<resources>
    <string name="app_name">FileManager</string>
    <string name="copy">Скопировать</string>
    <string name="cut">Вырезать</string>
    <string name="paste">Вставить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="open">Открыть</string>
    <string name="play">Воспроизвести</string>
    <string name="stop">Стоп</string>
    <string name="pause">Пауза</string>
    <string name="left">Лево</string>
    <string name="right">Право</string>
    <string name="errorFileType">Неизвестный тип файла</string>
    <string name="errorRecord">Ошибка звукозаписи</string>
    <string name="selectAction">Выберите действие:</string>
    <string name="camera">Камера</string>
    <string name="recorder">Диктофон</string>
    <string name="photo">Фото</string>
    <string name="start">Старт</string>
    <string name="record">Запись</string>
</resources>
